--- a/hons/docs/txSymbols.tex
+++ b/hons/docs/txSymbols.tex
@@ -3,10 +3,10 @@
 %The negation of the path predicate $\path{#1}{#2}{#3}$.
 \newcommand{\npath}[3]{\neg\path{#1}{#2}{#3}}
 
-%An Instance of the RAAP problem mapped from the MTC problem.
-\newcommand{\rInstance}{I_r}
 %An Instance of the MTC problem.
-\newcommand{\mInstance}{I_m}
+\newcommand{\mInstance}{I}
+%An Instance of the RAAP problem mapped from the MTC problem.
+\newcommand{\rInstance}{I'}
 
 %A solution to the MTC problem.
 \newcommand{\mSolution}{S}
