--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -77,6 +77,18 @@
   url = {http://www.gnu.org/software/glpk/}
 }
 
+%manchester dataflow
+@article{gur85,
+  title={The Manchester prototype dataflow computer},
+  author={Gurd, J.R. and Kirkham, C.C. and Watson, I.},
+  journal={Communications of the ACM},
+  volume={28},
+  number={1},
+  pages={34--52},
+  year={1985},
+  publisher={ACM}
+}
+
 %Hen cplex ibm
 @article{hen99,
   title={{Combinatorial optimization in OPL studio}},
@@ -360,6 +372,17 @@ keywords = "Adaptive software"
   year={1974}
 }
 
+%The 50 ish page survey of stream processing
+@article{ste97,
+  title={A survey of stream processing},
+  author={Stephens, R.},
+  journal={Acta Informatica},
+  volume={34},
+  number={7},
+  pages={491--541},
+  year={1997},
+  publisher={Springer}
+}
 
 %costs simplification
 @article{sto77,
