--- a/hons/docs/tBackground.tex
+++ b/hons/docs/tBackground.tex
@@ -1,30 +1,83 @@
 \chapter{Background}
 \section{Synchronous Dataflow}
-Synchronous dataflow (SDF) is a computing paradigm based on the execution of computational units called actors and the communication of computed outputs (called tokens) amongst the actors.
-Each actor may retain some information about previous invocations stored locally, this is called its state.
-Actors that do this are called stateful, whereas those that do not are called stateless.
-An actor's state may be used to vary the output of its tokens, such as an actor which appends an integer tag counting the sequence number of tokens it encounters.
-Certain implementations of SDF such as StreaMIT \cite{thies02} allow for actors to poll their token input buffers out-of-order, but this is not true of SDF systems in general.
 
-Computations are expressed as a SDF graph which includes:
-\begin{itemize}
-	\item Actors are represented by the vertices.
-	\item Communication between actors is represented by a directed edge.
-	\item Each endpoint of an edge has a consumption and production amount; the number of tokens produced or consumed for a single invocation of the actor.
-	\item Each edge may have zero or more tokens pre-loaded, called a delay; the layout of all delays in the graph is called the fill state.
-\end{itemize}
-This graphical format captures the isolation of independant computational units.
-Since computations are viewed in this large-grained decomposition, SDF programs are particularly easy to parallelise.
+\subsection{Streaming Systems}
+The entire domain of streaming systems is diverse and loosely defined.
+For convenience streaming programs can be though of as those which deal with ``flows'' of data rather than the more traditional Von Neumann computational model.
+To that end streaming systems can range from {\em dataflow} type systems to {\em signal processing}.
 
-When executing an actor we must fulfil the requirement that enough tokens are present on all edges which that actor consumes from first, then the actor is invoked, and places some tokens on edges which it produces for.
-Clearly then the initial fill-state of the graph is important in ensuring it can be executed.
-We are also concerned with executions of multiple actors.
-SDF programs execute on a potentially infinite dataset, to do this we construct several schedules for actor invocations which deal with the fill state.
-Note that a fill state is only concerned with the number of tokens on the edges, not the content of them.
-The ``init schedule'' invokes actors so as to increase the fill state.
-Once sufficiently filled the ``steady-state schedule'' is run multiple times.
-One running of the steady state leaves the fill-state the same as before the schedule was ran.
-Finally if required a ``death schedule'' is used to return the fill state to before the init schedule was ran.
+%CHEESE
+{\em Here we have a picture of a typical D-Graph}
+
+Stream programs can be though of as computational graphs, often visualised as directed graphs.
+In future we shall say that such a graph has $n$ nodes and $m$ arcs.
+In general systems the graphs have some nodes which provide inputs for the system, other nodes which transform data, and finally nodes which publish this data.
+In such graphs data is not a discrete finite unit but rather a (possibly infinite) stream, where each node in the graph performs an atomic computation, possibly consuming a subsequence of its inputs and possibly producing more data on its outputs.
+In this way the data streams are said to flow along the edges of the graph, these edges are therefore called {\em channels}.
+
+As a rule there are no restrictions applied to such computational graphs.
+However as we shall see there may be some limitations we can apply to these graphs in order to gain desirable properties.
+These restrictions are detailed in \ref{BACK_SYNC}.
+
+Stephens has compiled a more complete survey \cite{ste97} on the range of implementations for the varying flavours of stream systems.
+In that work he makes special note of the lack of coherence or similarity between differing implementations or even purposes for stream computation.
+To this end {\em streaming computation} is not a distinct theory for the computer sciences.
+
+\subsection{Synchronous Streaming}
+\label{BACK_SYNC}
+
+Synchronous streamins systems as the name would suggest are a subset of all streaming systems.
+Specifically streaming systems where the execution (called {\em invocation}) of the nodes in the computational graph is related to or conrolled by the execution of others.
+This necessarily implies some kind of global or local logical discrete clock.
+
+The reason synchronous systems are noteworthy is that they have some useful properties relating to the size of streams, the execution of nodes and the allocation of memory buffers.
+We shall look more closely at the synchronous streaming paradigm {\em synchronous dataflow} (SDF) to demonstrate this.
+
+%CHEESE
+{\em Here we have a picture of a typical SDF program}
+
+%CHEESE
+{\em i may change around the description below when i have a diagram to discuss/explain}
+
+In SDF the computational units (called {\em actors}) have limitations imposed on their execution by augmenting the channels with a ``production to consumption'' ratio.
+Suppose a channel streams data from actor $a$ to $b$, where one invocation of $a$ produces $i$ data items (called {\em tokens}) and one invocation of $b$ consumes $j$ tokens.
+Then we would annotate the SDF graph by writing $i$ near the $a$ end of the channel, and $j$ near the $b$ end.
+More formally this relation is between $producer$ and $consumer$ actos along a channel.
+If we called that channel $e$ then $prod(e) = a$, $cons(e) = b$, $productions(e, prod(e)) = i$ and $consumptions(e, cons(e)) = j$.
+
+At any given point in time there are some number of tokens in buffers in the system waiting to be consumed by actors.
+Tokens which exist on an actor's input channels before invocation are called $delays$, note that given the actor must have sufficient delays on its channel (that is, $>= consumptions(c, cons(c))$) before it can be invoked.
+The gloabl configuration of delays on all channels is called the {\em fill state}.
+The first desirable property of SDF is how it maintains the fill state.
+
+Early work by Lee and Messerschmitt details the calculation of a comodity called the {\em repetitions vector} \cite{lee87}.
+To calculate this we first express the SDF graph as a {\em topological matrix}, which is an $n \times m$ matrix $\Gamma$ where $\Gamma_{i,j}$ is $productions(i, j)$ if actor i produces to channel j, $-consumptions(i, j)$ if actor i consumes from channel j, and zero otherwise.
+Importantly if the rank of this matrix is $n-1$ then the repetitions vector can be computed.
+For a description of the properties of the repetitions vector and its computation see \cite{sdfBook}.
+Importantly if we invoke each actor exactly the number of times the repetitions vector details, then the fill state of the graph remains unchanged.
+This solves two key problems associated with unrestricted streaming systems.
+Firstly each actor must be invoked at least once, which prevents {\em starvation} of certain channles, leading to deadlocks.
+Secondly each actor is executed a finite number of times, which allows the memory buffers to have bounded size.
+Executing actors according to this vector is called the {\em steady state} schedule.
+
+%CHEESE
+{\em Here we put the topological matrix and repetitions vector of the above SDF program}
+
+\subsection{Applications}
+
+Applications of streaming computations can be as varied as its implementations.
+The original use of streaming systems was for analysing continuous flows of data, such as markets.
+Around the same time work was being done on continuous machines (called dataflow machines) such as the manchester prototype machine \cite{gur85}.
+These illustrate the two areas of interest for streaming systems; software and hardware, notably both of which operate on streams of items (data and instructions respectively).
+However the data need not be conceptualised as streams in order for streaming programs to be useful.
+
+More modern applications leverage the inherant parallelism in computational graphs to speed up common applications such as databases and data-mining.
+A more complete description of these systems can be found in the Related Works section.
+Streaming solutions lend themselves naturally to the kind of large scale and often distributed databases that companies deal with regularly.
+
+The other large area of use is in signal processing and other variants of real time systems.
+Environmental and status monitors, as well as astronomical software, right through to media applications like video processing (and video playing \cite{thies02}) fall under this category.
+Applications of this kind benefit from the more natural expression of the streaming domain, as well as benefiting from parallelism.
 
 \section{Cloud Computers}
 Cloud computers are a general term for service-based computing systems.
