--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -4,6 +4,7 @@
 \usepackage{amssymb,amsmath}
 \usepackage{pslatex}
 \usepackage{theorem}
+\usepackage{pst-all}
 
 \author{Nic Hollingum - 308193415}
 \title{Thesis working title}
@@ -16,7 +17,16 @@
 
 \tableofcontents
 
-\input{thesis.temp}
+\input{tIntroduction}
+\input{tBackground}
+\input{tExample}
+\input{tSystems}
+\input{tModel}
+\input{tHardness}
+\input{tAlgos}
+\input{tExperiment}
+\input{tRelated}
+\input{tConclusion}
 
 \chapter{Appendix}
 \input{symboltable}
