made a new figure simple sdf stolen from sdf book

--- a/hons/docs/figures/backDataflow.tex
+++ b/hons/docs/figures/backDataflow.tex
@@ -22,6 +22,9 @@
 	\ncarc{->}{0}{2}
 	\ncarc{->}{1}{2}
 	\ncarc{->}{B}{3}
+	\aput(0.15){5}
+	\aput(0.85){3}
+
 	\ncarc{->}{A}{4}
 	\ncarc{->}{1}{3}
 	\ncarc{->}{2}{4}
