--- a/hons/docs/tBackground.tex
+++ b/hons/docs/tBackground.tex
@@ -38,8 +38,13 @@ This necessarily implies some kind of global or local logical discrete clock.
 The reason synchronous systems are noteworthy is that they have some useful properties relating to the size of streams, the execution of nodes and the allocation of memory buffers.
 We shall look more closely at the synchronous streaming paradigm {\em synchronous dataflow} (SDF) to demonstrate this.
 
-%CHEESE
-{\em Here we have a picture of a typical SDF program}
+\begin{figure}
+\begin{center}
+	\input{figures/backSimpleSDF}
+\caption{Some SDF programs represented as graphs}
+\label{figSimpleSDF}
+\end{center}
+\end{figure}
 
 %CHEESE
 {\em i may change around the description below when i have a diagram to discuss/explain}
